added more examples

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47ca277d",
+   "id": "4238bae6",
    "metadata": {},
    "source": [
     "- NumPy is used for working with arrays.\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ef2d2053",
+   "id": "e5a72cd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "029ebfaf",
+   "id": "f0e2bc08",
    "metadata": {},
    "source": [
     "# 1.1 Create"
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8aab0c07",
+   "id": "3d582bf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dc8c54db",
+   "id": "1ec5a998",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0488c082",
+   "id": "90f4abf4",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "79aec4f1",
+   "id": "b3429167",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d5bdbb42",
+   "id": "18090875",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae9938ef",
+   "id": "a6652120",
    "metadata": {},
    "source": [
     "## 1.2 Read"
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "22a1144d",
+   "id": "ed600380",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "aa4e53b3",
+   "id": "62f3aa2f",
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "696f0be1",
+   "id": "48ae9e38",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "03e258ae",
+   "id": "d57558fa",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc3f221a",
+   "id": "b743f201",
    "metadata": {},
    "source": [
     "## 1.3 Slicing"
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "86c87191",
+   "id": "a76514a2",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "653796ce",
+   "id": "269f0be3",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "30f410c9",
+   "id": "b2418c02",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "859ff192",
+   "id": "3c2ba919",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78adc0e9",
+   "id": "b8cdcd0c",
    "metadata": {},
    "source": [
     "## 1.4 Update\n"
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5f8dd4c7",
+   "id": "eb571dc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9573fe6c",
+   "id": "bc31df94",
    "metadata": {},
    "outputs": [
     {
@@ -388,8 +388,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "8ce88112",
+   "execution_count": 37,
+   "id": "7b2489ed",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "       0.6818814 , 0.18848839, 0.90062156, 0.43111923, 0.72737926])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,8 +410,189 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "id": "0227b65a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#basic math functions\n",
+    "add = np.add(list1,list2)\n",
+    "sub = np.subtract(list1,list2)\n",
+    "div = np.divide(list1,list2)\n",
+    "mul = np.multiply(list1,list2)\n",
+    "dot = np.dot(list1,list2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "04837409",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.19247421, 0.48681339, 0.53201986, 0.51518573, 0.56997339,\n",
+       "       0.75498585, 0.27058553, 1.31817848, 1.05113821, 0.73615846])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "f5c76f04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.25454908, -0.36352586, -0.50819977, -0.29581477,  0.05109707,\n",
+       "       -0.60877694, -0.10639124, -0.48306465,  0.18889975, -0.71860006])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "aeccbbef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.64817556, 0.14498628, 0.02289909, 0.27049423, 1.1969528 ,\n",
+       "       0.10720992, 0.43555545, 0.46363193, 1.43816126, 0.01206963])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "div"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "3d128fb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33929988, 0.02620906, 0.00619453, 0.04447749, 0.08056469,\n",
+       "       0.04984857, 0.01547436, 0.37606076, 0.26730211, 0.00638581])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mul"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "d5884db9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.211817243884774"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "2fa4f720",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stat functions---(sap lemm)\n",
+    "sqrt = np.sqrt(list1)\n",
+    "ab = np.abs(-3)\n",
+    "power = np.power([2,2,2],[2,1,0])  # array1 raised to exponents in array2\n",
+    "log = np.log(25)\n",
+    "exp = np.exp([2,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "3dc0c6b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 2, 1])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "power"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "7741dce0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7.3890561 , 20.08553692])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d3bcf156",
+   "id": "8f790760",
    "metadata": {},
    "outputs": [],
    "source": []
