modified numpy.ipynb and also created pandas.ipynb

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -5,12 +5,12 @@
    "id": "1a123a62",
    "metadata": {},
    "source": [
-    "# 1. NumPy"
+    "#  NumPy"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4238bae6",
+   "id": "2fe89628",
    "metadata": {},
    "source": [
     "- NumPy is used for working with arrays.\n",
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "e5a72cd4",
+   "execution_count": 3,
+   "id": "10c79581",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0e2bc08",
+   "id": "7e74713a",
    "metadata": {},
    "source": [
     "# 1.1 Create"
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3d582bf9",
+   "id": "79277e5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,23 +57,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "1ec5a998",
+   "execution_count": 5,
+   "id": "c99a2368",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.20748134, 0.48032038, 0.8979464 , 0.20025759],\n",
-       "        [0.76453676, 0.90182434, 0.23601356, 0.52829327],\n",
-       "        [0.20138967, 0.12108069, 0.89770738, 0.88880349]],\n",
+       "array([[[0.46566796, 0.59216683, 0.72461728, 0.18563465],\n",
+       "        [0.36129672, 0.82996179, 0.94007407, 0.55884191],\n",
+       "        [0.01541504, 0.14457982, 0.09359914, 0.01609773]],\n",
        "\n",
-       "       [[0.54128486, 0.77817567, 0.03874227, 0.7507657 ],\n",
-       "        [0.92901983, 0.32199217, 0.0882579 , 0.97878853],\n",
-       "        [0.00298111, 0.13953065, 0.30716295, 0.56337187]]])"
+       "       [[0.46996231, 0.80541989, 0.83162797, 0.04402529],\n",
+       "        [0.94612744, 0.08486987, 0.0436827 , 0.96924657],\n",
+       "        [0.11836229, 0.73880474, 0.66724862, 0.30860654]]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,8 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "90f4abf4",
+   "execution_count": 6,
+   "id": "fe762ecf",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "        [0., 0.]]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,8 +109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "b3429167",
+   "execution_count": 7,
+   "id": "db3d720e",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "        [7, 7]]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "18090875",
+   "execution_count": 8,
+   "id": "05836c24",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "        [1., 1.]]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6652120",
+   "id": "aa85b696",
    "metadata": {},
    "source": [
     "## 1.2 Read"
@@ -167,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "ed600380",
+   "execution_count": 9,
+   "id": "c9c90ed6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,8 +180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "62f3aa2f",
+   "execution_count": 10,
+   "id": "4d2efced",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "(2, 3, 4)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "48ae9e38",
+   "execution_count": 11,
+   "id": "340ca72a",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "24"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,8 +222,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "d57558fa",
+   "execution_count": 12,
+   "id": "7a54c0b9",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b743f201",
+   "id": "c164ec44",
    "metadata": {},
    "source": [
     "## 1.3 Slicing"
@@ -251,23 +251,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "a76514a2",
+   "execution_count": 13,
+   "id": "3eec921d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.20748134, 0.48032038, 0.8979464 , 0.20025759],\n",
-       "        [0.76453676, 0.90182434, 0.23601356, 0.52829327],\n",
-       "        [0.20138967, 0.12108069, 0.89770738, 0.88880349]],\n",
+       "array([[[0.46566796, 0.59216683, 0.72461728, 0.18563465],\n",
+       "        [0.36129672, 0.82996179, 0.94007407, 0.55884191],\n",
+       "        [0.01541504, 0.14457982, 0.09359914, 0.01609773]],\n",
        "\n",
-       "       [[0.54128486, 0.77817567, 0.03874227, 0.7507657 ],\n",
-       "        [0.92901983, 0.32199217, 0.0882579 , 0.97878853],\n",
-       "        [0.00298111, 0.13953065, 0.30716295, 0.56337187]]])"
+       "       [[0.46996231, 0.80541989, 0.83162797, 0.04402529],\n",
+       "        [0.94612744, 0.08486987, 0.0436827 , 0.96924657],\n",
+       "        [0.11836229, 0.73880474, 0.66724862, 0.30860654]]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,19 +278,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "269f0be3",
+   "execution_count": 14,
+   "id": "bd5bc4b9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.20748134, 0.48032038, 0.8979464 , 0.20025759],\n",
-       "       [0.76453676, 0.90182434, 0.23601356, 0.52829327],\n",
-       "       [0.20138967, 0.12108069, 0.89770738, 0.88880349]])"
+       "array([[0.46566796, 0.59216683, 0.72461728, 0.18563465],\n",
+       "       [0.36129672, 0.82996179, 0.94007407, 0.55884191],\n",
+       "       [0.01541504, 0.14457982, 0.09359914, 0.01609773]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,17 +302,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "b2418c02",
+   "execution_count": 15,
+   "id": "c67c0c57",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.901824335272361"
+       "0.8299617855253929"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,18 +324,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "3c2ba919",
+   "execution_count": 16,
+   "id": "744df113",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.76453676, 0.90182434, 0.23601356, 0.52829327],\n",
-       "       [0.20138967, 0.12108069, 0.89770738, 0.88880349]])"
+       "array([[0.36129672, 0.82996179, 0.94007407, 0.55884191],\n",
+       "       [0.01541504, 0.14457982, 0.09359914, 0.01609773]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8cdcd0c",
+   "id": "17c137fe",
    "metadata": {},
    "source": [
     "## 1.4 Update\n"
@@ -355,8 +355,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "eb571dc5",
+   "execution_count": 17,
+   "id": "22c479e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,18 +366,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "bc31df94",
+   "execution_count": 18,
+   "id": "02adfdd9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.46896257, 0.06164376, 0.01191004, 0.10968548, 0.31053523,\n",
-       "       0.07310445, 0.08209714, 0.41755692, 0.62001898, 0.0087792 ])"
+       "array([0.30733011, 0.43611038, 0.23834356, 0.39829041, 0.44724184,\n",
+       "       0.96100418, 0.05282784, 0.87471913, 0.9513772 , 0.82940336])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,18 +388,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "7b2489ed",
+   "execution_count": 19,
+   "id": "e50d3a58",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.72351165, 0.42516963, 0.52010981, 0.40550025, 0.25943816,\n",
-       "       0.6818814 , 0.18848839, 0.90062156, 0.43111923, 0.72737926])"
+       "array([0.08008485, 0.34010184, 0.70487926, 0.12016962, 0.70515393,\n",
+       "       0.86038828, 0.34885457, 0.55534388, 0.37086477, 0.86334336])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,8 +410,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "0227b65a",
+   "execution_count": 20,
+   "id": "e8bad01e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,18 +425,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "04837409",
+   "execution_count": 21,
+   "id": "af9bef40",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.19247421, 0.48681339, 0.53201986, 0.51518573, 0.56997339,\n",
-       "       0.75498585, 0.27058553, 1.31817848, 1.05113821, 0.73615846])"
+       "array([0.38741496, 0.77621222, 0.94322282, 0.51846003, 1.15239576,\n",
+       "       1.82139247, 0.40168241, 1.43006301, 1.32224197, 1.69274672])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,18 +447,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "f5c76f04",
+   "execution_count": 22,
+   "id": "e28b044e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.25454908, -0.36352586, -0.50819977, -0.29581477,  0.05109707,\n",
-       "       -0.60877694, -0.10639124, -0.48306465,  0.18889975, -0.71860006])"
+       "array([ 0.22724526,  0.09600854, -0.46653571,  0.27812079, -0.25791209,\n",
+       "        0.1006159 , -0.29602673,  0.31937525,  0.58051242, -0.03393999])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,18 +469,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "aeccbbef",
+   "execution_count": 23,
+   "id": "dc432185",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.64817556, 0.14498628, 0.02289909, 0.27049423, 1.1969528 ,\n",
-       "       0.10720992, 0.43555545, 0.46363193, 1.43816126, 0.01206963])"
+       "array([3.83755629, 1.2822935 , 0.33813388, 3.3144018 , 0.6342471 ,\n",
+       "       1.11694244, 0.15143227, 1.57509456, 2.56529404, 0.96068772])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,18 +491,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "3d128fb5",
+   "execution_count": 24,
+   "id": "5fc4277b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.33929988, 0.02620906, 0.00619453, 0.04447749, 0.08056469,\n",
-       "       0.04984857, 0.01547436, 0.37606076, 0.26730211, 0.00638581])"
+       "array([0.02461248, 0.14832194, 0.16800343, 0.04786241, 0.31537434,\n",
+       "       0.82683674, 0.01842923, 0.48576992, 0.35283229, 0.71605988])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,17 +513,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "d5884db9",
+   "execution_count": 25,
+   "id": "12b0b1c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.211817243884774"
+       "3.1041026621817487"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,8 +534,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "2fa4f720",
+   "execution_count": 26,
+   "id": "fe1e6c60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,13 +544,15 @@
     "ab = np.abs(-3)\n",
     "power = np.power([2,2,2],[2,1,0])  # array1 raised to exponents in array2\n",
     "log = np.log(25)\n",
-    "exp = np.exp([2,3])"
+    "exp = np.exp([2,3])  #returns an array with exponential of all elements of input array.\n",
+    "mins = np.min(list1)\n",
+    "maxs = np.max(list2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "3dc0c6b6",
+   "execution_count": 27,
+   "id": "52d9eacd",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +561,7 @@
        "array([4, 2, 1])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,8 +572,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "7741dce0",
+   "execution_count": 28,
+   "id": "fbe64f75",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +582,7 @@
        "array([ 7.3890561 , 20.08553692])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,8 +593,195 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "b9bb2ece",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.052827840165709405"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "908a7ae0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8633433551030486"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "maxs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d706fee",
+   "metadata": {},
+   "source": [
+    "## 1.5 Reshaping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e111c641",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ad035533",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 2, 6)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data.reshape(2,2,-1)   #allowed to have one unknown dimensio\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "67f1520a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9,  9,  9,  9,  9,  9, 66])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#append()\n",
+    "\n",
+    "list3 = np.full([2,3],9)\n",
+    "list3 = np.append(list3,[66])\n",
+    "list3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ad7be674",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 9,  9,  9,  9, 88,  9,  9, 66,  1])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# insert()\n",
+    "\n",
+    "list3 = np.insert(list3,4,88)\n",
+    "list3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8f790760",
+   "id": "f141eb35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e387536",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b04fc2e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdeaf692",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6efb1254",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d3b3aef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa97b8b0",
    "metadata": {},
    "outputs": [],
    "source": []
